overflow fixed

--- a/src/components/Home/Venues.css
+++ b/src/components/Home/Venues.css
@@ -157,6 +157,7 @@
   height: 100vh;
   flex-direction: column;
   background-color: #395198;
+  overflow: hidden;
 }
 
 .venuwLowerDetail {
